# mv64e-rest-to-kafka-gateway

./: CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: deploy.yml  release.yml  test.yml
src/: auth.rs  cli.rs  main.rs  routes.rs  sender.rs
