[package]
name = "mv64e-rest-to-kafka-gateway"
version = "0.2.0"
edition = "2024"
authors = ["Paul-Christian Volkmer <code@pcvolkmer.de>"]
license = "AGPL-3.0"
description = "Send MV64e HTTP requests with DNPM V2.1 payload to a Kafka broker"

# Dependencies

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
axum = { version = "0.8", features = ["tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.48", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4"] }
base64 = "0.22"
bcrypt = "0.17"
rdkafka = { version = "0.38", features = ["cmake-build", "libz-static", "ssl-vendored"] }
async-trait = "0.1"
# DTOs
mv64e-mtb-dto = { git = "https://github.com/dnpm-dip/mv64e-mtb-dto-rs", tag = "v0.2.0" }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
mockall = "0.13"
rstest = "0.26"

# Lints

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unused_must_use = "deny"

# Profiles

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
